# PythoniteEngine

./: Example_PythoniteTemplate.json  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  planned-feature.md
src/pythonite_engine/: __init__.py  annotation.py  engine_extension.py  errors.py  pythonite_engine.py  pythonite_representation.py  pythonite_template.py  scope.py  utils.py
tests/: test_PythoniteRepresentation.py
tests/Annotation/: test_Annotation_pythonite_signature.py  test_Annotation_validate_annotation.py
tests/PythoniteEngine/: test_PythoniteEngine_get_component.py  test_PythoniteEngine_get_function.py  test_PythoniteEngine_get_representation.py  test_PythoniteEngine_get_template.py  test_PythoniteEngine_parse_obj.py  test_PythoniteEngine_register_component.py  test_PythoniteEngine_register_function.py  test_PythoniteEngine_register_representation.py  test_PythoniteEngine_register_template.py
tests/PythoniteTemplate/: test_PythoniteTemplate_model_dump_json.py  test_PythoniteTemplate_model_validate_json.py  test_PythoniteTemplate_render.py
tests/Scope/: test_Scope_declare_variable.py  test_Scope_get_variable_value.py  test_set_variable_value.py
tests/operators/: test_ArithmeticOperatorRepresentation.py  test_ComparisonOperatorRepresentation.py  test_IdentityOperatorRepresentation.py  test_IndexAccessOperatorRepresentation.py  test_LogicalOperatorRepresentation.py  test_MembershipOperatorRepresentation.py  test_SlicingOperatorRepresentation.py
tests/types/: test_AnyTypeRepresentation.py  (+11 more)
(+66 files in other folders)
